app/.cxx/Debug/2b73r6e4/x86_64/android_gradle_build_stdout_blazefacencnn_x86_64.txt
ninja: Entering directory `D:\collage\ncnn android\ncnn_Android_blazeface-main\ncnn_Android_mediapipe_blazeface\app\.cxx\Debug\2b73r6e4\x86_64'
[1/2] Building CXX object CMakeFiles/blazefacencnn.dir/face.cpp.o
FAILED: CMakeFiles/blazefacencnn.dir/face.cpp.o 
C:\Users\MO3TAZ~1\AppData\Local\Android\Sdk\ndk\214~1.707\TOOLCH~1\llvm\prebuilt\WINDOW~1\bin\CLANG_~1.EXE --target=x86_64-none-linux-android24 --gcc-toolchain="C:/Users/Mo3taz kayad/AppData/Local/Android/Sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/windows-x86_64" --sysroot="C:/Users/Mo3taz kayad/AppData/Local/Android/Sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/windows-x86_64/sysroot"  -Dblazefacencnn_EXPORTS -isystem "D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/x86_64/include/ncnn" -isystem "D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/sdk/native/jni/include" -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security   -O0 -fno-limit-debug-info  -fPIC   -fno-rtti -fno-exceptions -std=gnu++11 -MD -MT CMakeFiles/blazefacencnn.dir/face.cpp.o -MF CMakeFiles\blazefacencnn.dir\face.cpp.o.d -o CMakeFiles/blazefacencnn.dir/face.cpp.o -c "D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp"
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3164:44: warning: format specifies type 'unsigned int' but the argument has type 'std::__ndk1::vector<cv::Point_<float>, std::__ndk1::allocator<cv::Point_<float> > >::size_type' (aka 'unsigned long') [-Wformat]
        ALOG("size of Fore head vec: %ul", objects[i].fore_head.size());
                                     ~~    ^~~~~~~~~~~~~~~~~~~~~~~~~~~
                                     %lu
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:22:66: note: expanded from macro 'ALOG'
#define  ALOG(...)  __android_log_print(ANDROID_LOG_INFO,LOG_TAG,__VA_ARGS__)
                                                                 ^~~~~~~~~~~
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3330:34: error: use of undeclared identifier 'Wei'
    double BSA = 0.007184 * (pow(Wei, 0.425)) * (pow(Hei, 0.725));
                                 ^
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3330:54: error: use of undeclared identifier 'Hei'
    double BSA = 0.007184 * (pow(Wei, 0.425)) * (pow(Hei, 0.725));
                                                     ^
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3331:54: error: use of undeclared identifier 'Beats'; did you mean 'beats'?
    double SV = (-6.6 + (0.25 * (ET - 35)) - (0.62 * Beats) + (40.4 * BSA) - (0.51 * Agg));
                                                     ^~~~~
                                                     beats
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3327:20: note: 'beats' declared here
void CalcBP(double beats){
                   ^
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3331:86: error: use of undeclared identifier 'Agg'
    double SV = (-6.6 + (0.25 * (ET - 35)) - (0.62 * Beats) + (40.4 * BSA) - (0.51 * Agg));
                                                                                     ^
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3332:32: error: use of undeclared identifier 'Wei'
    double PP = SV / ((0.013 * Wei - 0.007 * Agg - 0.004 * beats) + 1.307);
                               ^
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3332:46: error: use of undeclared identifier 'Agg'
    double PP = SV / ((0.013 * Wei - 0.007 * Agg - 0.004 * beats) + 1.307);
                                             ^
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3333:18: error: use of undeclared identifier 'Q'
    double MPP = Q * ROB;
                 ^
D:/collage/ncnn android/ncnn_Android_blazeface-main/ncnn_Android_mediapipe_blazeface/app/src/main/jni/face.cpp:3336:32: error: expected ';' at end of declaration
    double  DP = (MPP - PP / 3)
                               ^
                               ;
1 warning and 8 errors generated.
ninja: build stopped: subcommand failed.
